feat: :sparkles: Logout and TimeSpan done

--- a/API/Views/Home/Index.cshtml
+++ b/API/Views/Home/Index.cshtml
@@ -49,6 +49,9 @@
                     <div class="hero-link">
                         <a href="https://localhost:7030/account/google-login">Google Auth</a>
                     </div>
+                    <div class="hero-link">
+                        <a href="https://localhost:7030/account/google-logout">Google logout</a>
+                    </div>
                 </div>
             </div>
         </div>
